syntax = "proto3";

option go_package = "./api";

service User{
  rpc GetUserById(UserRequest) returns (UserInfoResponse){}
  rpc GetSpecializeByUserId(UserRequest) returns(GetUserSpecializeResponse){}
}

message UserRequest{
  uint64 id = 1;
}

message UserInfoResponse{
  string email = 1;
  string login = 2;
  string nameSurname = 3;
  string about = 4;
  repeated string specializes = 5;
  bool executor = 6;
  string img = 7;
  uint64 rating = 8;
}

message GetUserSpecializeResponse{
  repeated string specializes = 1;
}
